--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta http-equiv="refresh" content="0; url=https://proj.org/" />
+    <link rel="canonical" href="https://proj.org">
   </head>
 
   <body>
